<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wapp</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter Cities Separated by \',\'</string>
    <string name="goButton">GO</string>
    <string name="midText">Available Cities</string>
    <string name="deleteButton">Delete all Cities</string>
    <string name="historyButton">History</string>
    <string name="gpsButton">Web</string>
    <string name= "invalid">Invalid Input</string>
    <string name= "ok">OK</string>
    <string name= "connection">Enable data connection</string>
    <string name= "connectionE">Connection Error</string>
    <string name= "cityE">Invalid City</string>
    <string name= "searchURL">https://www.google.co.in/#q=</string>
    
    <string name="stock_company_name">Company Name</string>
    <string name="stock_year_low">Year Low:</string>
    <string name="stock_year_high">Year High:</string>
    <string name="stock_days_low">Days Low:</string>
    <string name="stock_days_high">Days High:</string>
    <string name="title_activity_stock_info">StockInfoActivity</string>
    <string name="last_trade_price_only">Last Price:</string>
    <string name="change">Change:</string>
    <string name="days_range">Daily Price Range:</string>
    <string name="title_activity_city_info">CityInfoActivity</string>
    
     <string name="weather">::WEATHER::</string>
     <string name="main">Main: </string>
      <string name="desc">Desc: </string>
      <string name="humid">Humidity: </string>
      <string name="press">Pressure: </string>
      <string name="temp">::TEMPERATURE::</string>
    <string name="temp_min">Min: </string>
    <string name="temp_max">Max: </string>
    <string name="wind">::WIND:: </string>
    <string name="speed">Speed: </string>
    <string name="Weather">Weather: </string>
    <string name="Temp">Temperature: </string>

</resources>
